--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/telescope": "^5.5",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "skyronic/laravel-file-generator": "dev-l12-compatibility",
         "spatie/laravel-activitylog": "^4.10",
         "spatie/laravel-medialibrary": "^11.12",
         "spatie/laravel-permission": "^6.16",
@@ -28,13 +29,19 @@
         "fakerphp/faker": "^1.23",
         "laravel-shift/blueprint": "^2.11",
         "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.18",
+        "laravel/pint": "^1.21",
         "laravel/sail": "^1.41",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.7",
         "pestphp/pest-plugin-laravel": "^3.1"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/laravel-shift/laravel-file-generator.git"
+        }
+    ],
     "autoload": {
         "psr-4": {
             "App\\": "app/",
