--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
         "types": "tsc --noEmit"
     },
     "devDependencies": {
-        "@eslint/js": "^9.19.0",
-        "eslint": "^9.17.0",
-        "eslint-config-prettier": "^10.0.1",
-        "eslint-plugin-react": "^7.37.3",
-        "eslint-plugin-react-hooks": "^5.1.0",
-        "prettier": "^3.4.2",
+        "@eslint/js": "^9.22.0",
+        "eslint": "^9.22.0",
+        "eslint-config-prettier": "^10.1.1",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.2.0",
+        "prettier": "^3.5.3",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.11",
-        "typescript-eslint": "^8.23.0"
+        "typescript-eslint": "^8.26.1"
     },
     "dependencies": {
         "@headlessui/react": "^2.2.0",
-        "@inertiajs/react": "^2.0.0",
+        "@inertiajs/react": "^2.0.5",
         "@radix-ui/react-accordion": "^1.2.3",
         "@radix-ui/react-alert-dialog": "^1.1.6",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -43,36 +43,37 @@
         "@radix-ui/react-toggle": "^1.1.2",
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
-        "@tailwindcss/vite": "^4.0.6",
+        "@tailwindcss/vite": "^4.0.13",
         "@tanstack/react-table": "^8.21.2",
-        "@types/react": "^19.0.3",
-        "@types/react-dom": "^19.0.2",
+        "@types/react": "^19.0.10",
+        "@types/react-dom": "^19.0.4",
         "@vitejs/plugin-react": "^4.3.4",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "cmdk": "1.0.0",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.1.2",
         "date-fns": "^4.1.0",
-        "globals": "^15.14.0",
-        "laravel-vite-plugin": "^1.0",
+        "globals": "^15.15.0",
+        "laravel-vite-plugin": "^1.2.0",
         "lucide-react": "^0.475.0",
-        "next-themes": "^0.4.4",
+        "next-themes": "^0.4.6",
         "react": "^19.0.0",
         "react-day-picker": "9.5.1",
         "react-dom": "^19.0.0",
         "recharts": "^2.15.1",
         "sonner": "^2.0.1",
-        "tailwind-merge": "^3.0.1",
-        "tailwindcss": "^4.0.0",
+        "swr": "^2.3.3",
+        "tailwind-merge": "^3.0.2",
+        "tailwindcss": "^4.0.13",
         "tailwindcss-animate": "^1.0.7",
-        "typescript": "^5.7.2",
+        "typescript": "^5.8.2",
         "vaul": "^1.1.2",
-        "vite": "^6.0"
+        "vite": "^6.2.1"
     },
     "optionalDependencies": {
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
-        "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
-        "lightningcss-linux-x64-gnu": "^1.29.1"
+        "@tailwindcss/oxide-linux-x64-gnu": "^4.0.13",
+        "lightningcss-linux-x64-gnu": "^1.29.2"
     },
     "overrides": {
         "react-is": "^19.0.0"
